@@ -19,15 +19,25 @@ package org.apache.solr.core;
 
 
 import java.io.File;
+import java.io.IOException;
 import java.io.StringReader;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 import java.util.SortedMap;
 import java.util.TreeMap;
+import java.util.concurrent.TimeUnit;
 
 import com.google.common.collect.ImmutableList;
 import org.apache.commons.io.FileUtils;
+import org.apache.http.HttpEntity;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.util.EntityUtils;
 import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.client.solrj.impl.CloudSolrServer;
+import org.apache.solr.client.solrj.impl.HttpSolrServer;
+import org.apache.solr.handler.TestSolrConfigHandlerConcurrent;
 import org.apache.solr.util.RestTestBase;
 import org.apache.solr.util.RestTestHarness;
 import org.eclipse.jetty.servlet.ServletHolder;
@@ -77,13 +87,11 @@ public class TestSolrConfigHandler extends RestTestBase {
 
 
   public void testProperty() throws Exception{
+    RestTestHarness harness = restTestHarness;
     String payload= "{\n" +
         " 'set-property' : { 'updateHandler.autoCommit.maxDocs':100, 'updateHandler.autoCommit.maxTime':10 } \n" +
         " }";
-    RestTestHarness harness = restTestHarness;
-    String response = harness.post("/config?wt=json", SolrTestCaseJ4.json(payload));
-    Map map = (Map) ObjectBuilder.getVal(new JSONParser(new StringReader(response)));
-    assertNull(response,  map.get("errors"));
+    runConfigCommand( harness,"/config?wt=json", payload);
 
     Map m = (Map) getRespMap("/config/overlay?wt=json" ,harness).get("overlay");
     Map props = (Map) m.get("props");
@@ -99,9 +107,7 @@ public class TestSolrConfigHandler extends RestTestBase {
     payload= "{\n" +
         " 'unset-property' :  'updateHandler.autoCommit.maxDocs'} \n" +
         " }";
-    response = harness.post("/config?wt=json", SolrTestCaseJ4.json(payload));
-    map = (Map) ObjectBuilder.getVal(new JSONParser(new StringReader(response)));
-    assertNull(response,  map.get("errors"));
+    runConfigCommand(harness, "/config?wt=json", payload);
 
     m = (Map) getRespMap("/config/overlay?wt=json" ,harness).get("overlay");
     props = (Map) m.get("props");
@@ -111,14 +117,12 @@ public class TestSolrConfigHandler extends RestTestBase {
   }
 
   public void testUserProp() throws Exception{
+    RestTestHarness harness = restTestHarness;
     String payload= "{\n" +
         " 'set-user-property' : { 'my.custom.variable.a':'MODIFIEDA'," +
         " 'my.custom.variable.b':'MODIFIEDB' } \n" +
         " }";
-    RestTestHarness harness = restTestHarness;
-    String response = harness.post("/config?wt=json", SolrTestCaseJ4.json(payload));
-    Map map = (Map) ObjectBuilder.getVal(new JSONParser(new StringReader(response)));
-    assertNull(response,  map.get("errors"));
+    runConfigCommand(harness,"/config?wt=json", payload);
 
     Map m = (Map) getRespMap("/config/overlay?wt=json" ,harness).get("overlay");
     Map props = (Map) m.get("userProps");
@@ -132,14 +136,93 @@ public class TestSolrConfigHandler extends RestTestBase {
     assertEquals("MODIFIEDA", m.get("a"));
     assertEquals("MODIFIEDB", m.get("b"));
 
+  }
 
+  public void testReqHandlerAPIs() throws Exception {
+    reqhandlertests(restTestHarness, null,null);
+  }
+
+  private static void runConfigCommand(RestTestHarness harness, String uri,  String payload) throws IOException {
+    String response = harness.post(uri, SolrTestCaseJ4.json(payload));
+    Map map = (Map) ObjectBuilder.getVal(new JSONParser(new StringReader(response)));
+    assertNull(response,  map.get("errors"));
+  }
+
+
+  public static void reqhandlertests(RestTestHarness writeHarness,String testServerBaseUrl, CloudSolrServer cloudSolrServer) throws Exception {
+    String payload = "{\n" +
+        "'create-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' , 'startup' : 'lazy'}\n" +
+        "}";
+    runConfigCommand(writeHarness,"/config?wt=json", payload);
+
+    boolean success = false;
+    long startTime = System.nanoTime();
+    long maxTimeoutSeconds = 10;
+    while ( TimeUnit.SECONDS.convert(System.nanoTime() - startTime, TimeUnit.NANOSECONDS) < maxTimeoutSeconds) {
+      String uri = "/config/overlay?wt=json";
+      Map m = testServerBaseUrl ==null?  getRespMap(uri,writeHarness) : TestSolrConfigHandlerConcurrent.getAsMap(testServerBaseUrl+uri ,cloudSolrServer) ;
+      if("lazy".equals( ConfigOverlay.getObjectByPath(m,  true, Arrays.asList("overlay", "requestHandler", "/x","startup")))) {
+        Map map = getRespMap("/x?wt=json",writeHarness);
+        if(map.containsKey("params")) {
+          success = true;
+          break;
+        }
+      }
+      Thread.sleep(100);
+
+    }
+
+    assertTrue( "Could not register requestHandler  ", success);
+
+    payload = "{\n" +
+        "'update-requesthandler' : { 'name' : '/x', 'class': 'org.apache.solr.handler.DumpRequestHandler' , 'startup' : 'lazy' , 'a':'b'}\n" +
+        "}";
+    runConfigCommand(writeHarness,"/config?wt=json", payload);
+
+    success = false;
+    startTime = System.nanoTime();
+    maxTimeoutSeconds = 10;
+    while ( TimeUnit.SECONDS.convert(System.nanoTime() - startTime, TimeUnit.NANOSECONDS) < maxTimeoutSeconds) {
+      String uri = "/config/overlay?wt=json";
+      Map m = testServerBaseUrl ==null?  getRespMap(uri,writeHarness) : TestSolrConfigHandlerConcurrent.getAsMap(testServerBaseUrl+uri ,cloudSolrServer) ;
+      if("b".equals( ConfigOverlay.getObjectByPath(m,  true, Arrays.asList("overlay", "requestHandler", "/x","a")))) {
+          success = true;
+          break;
+      }
+      Thread.sleep(100);
+
+    }
+
+    assertTrue( "Could not update requestHandler  ", success);
+
+    payload = "{\n" +
+        "'delete-requesthandler' : '/x'" +
+        "}";
+    runConfigCommand(writeHarness,"/config?wt=json", payload);
+    success = false;
+    startTime = System.nanoTime();
+    maxTimeoutSeconds = 10;
+    while ( TimeUnit.SECONDS.convert(System.nanoTime() - startTime, TimeUnit.NANOSECONDS) < maxTimeoutSeconds) {
+      String uri = "/config/overlay?wt=json";
+      Map m = testServerBaseUrl ==null?  getRespMap(uri,writeHarness) : TestSolrConfigHandlerConcurrent.getAsMap(testServerBaseUrl+uri ,cloudSolrServer) ;
+      if(null == ConfigOverlay.getObjectByPath(m,  true, Arrays.asList("overlay", "requestHandler", "/x","a"))) {
+        success = true;
+        break;
+      }
+      Thread.sleep(100);
+
+    }
+    assertTrue( "Could not delete requestHandler  ", success);
 
   }
 
 
-
   public static Map getRespMap(String path, RestTestHarness restHarness) throws Exception {
     String response = restHarness.query(path);
-    return (Map) ObjectBuilder.getVal(new JSONParser(new StringReader(response)));
+    try {
+      return (Map) ObjectBuilder.getVal(new JSONParser(new StringReader(response)));
+    } catch (JSONParser.ParseException e) {
+      return Collections.emptyMap();
+    }
   }
 }
